# CMake

Lab 1/: CMakeLists.txt
Lab2/: CMakeLists.txt  Lab2.cpp
Lab3/: CMakeLists.txt  Lab3.cpp
Lab3/lib/: CMakeLists.txt  wifi.cpp  wifi.hpp
